[tool.isort]
profile = "black"

[tool.coverage.run]
concurrency = ["thread", "gevent"]
omit = ["migrations/*"]

[tool.pytest.ini_options]
markers = ["test_data", ]
asyncio_mode = "auto"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "jheep"

[project]
name = "jheep"
authors = [
  { name = "Jinserk Baik", email = "support@jhee.group" }
]
description = "JHEEP: JHEE Platform"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  "aiofiles",
  "aiomysql",
  "aioredis",
  "aiosqlite",
  "alembic",
  "argon2_cffi",
  "asyncpg",
  "Babel",
  "dramatiq[redis]",
  "fastapi",
  "fastapi-cache2[redis]",
  "fastapi-users[sqlalchemy]",
  "fastapi-versioning",
  "fs",
  "furl",
  "Jinja2",
  "jwcrypto",
  "kubernetes",
  "loguru",
  "mlflow[extras]",
  "mlserver",
  "mlserver-sklearn",
  "psycopg2-binary",
  "pycountry",
  "pydantic[dotenv]",
  "python-multipart",
  "sqlalchemy",
  "sqlalchemy-utils",
  "tabulate",
  "typer",
  "uvicorn[standard]",
]

[project.optional-dependencies]
worker = [
  "dask[complete]",
  "distributed",
  "dask-ml[complete]",
  "h5py",
  "numpy",
  "pandas",
  "tables",
]
dev = [
  "asgi-lifespan",
  "black",
  "bumpversion",
  "coverage[toml]",
  "flit",
  "gevent",
  "httpx",
  "ipython",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-mock",
  "pytest-fastapi-deps",
  "sqlalchemy-utils",
  "tryceratops",
]

[project.scripts]
jheep = "jheep.cli:app"

[project.urls]
Documentation = "https://docs.jhee.group/jheep"

[tool.flit.sdist]
include = ["./static", "./locale"]
exclude = ["tests"]
